deployments/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress

  labels:
    name: frontend-ingress
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - www.hypertheory-training.com
      secretName: mkcert

  rules:
    - host: www.hypertheory-training.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
